# IChat

./: .env.example  .gitignore  AGENT_TRACKING_SUMMARY.md  CLAUDE.md  README.md  pyproject.toml
backend/: .env.example  main.py  model.py  pyproject.toml
backend/agents/: __init__.py  backend_factory.py  deepagents.py  skill_loader.py  skill_tracking_middleware.py
backend/api/: chat.py  demos.py  schemas.py  system.py  wechat_work.py
backend/channels/: base.py
backend/channels/wechat_work/: auth.py  client.py  handler.py  models.py
backend/common/: __init__.py  agent_registry.py  agent_tracker.py  config.py  langfuse.py  session_manager.py  sse.py  store_manager.py
backend/demos/: basic_chat.py  deepagents_chat.py  deepagents_demo.py
backend/models/: __init__.py
backend/skills/: README.md
backend/test/: check_response.py  checkpoint_explorer.py  checkpoint_io_test.py  checkpoint_utils.py  checkpoint_viewer.py  compare_tests.py  debug_agent.py  debug_store_backend.py  debug_wechat_verify.py  direct_test.py  e2e_store_test.py  full_test.py  monitor_test.py  quick_test.py  test_agent_tracking.py  test_analyze_orchestrator.py  test_audit_log_normalization.py  test_callbacks_fix.py  test_chat.py  test_check_tools.py  test_deepagents.py  test_fix.py  test_java_bubble_sort.py  test_java_hello.py  test_langfuse_switch.py  test_message_structure.py  test_nginx_404.py  test_normalize_simple.py  test_simple_agent.py  test_skills_config.py  test_sre_task.py  test_sse_events.py  test_stream_debug.py  test_timeout_fix.py  test_tool.py
docs/: AGENT_TRACKING_SUMMARY.md  (+1 more)
(+26 files in other folders)
